01-cluster/02-Linkerd/ingress-linkerd-web-internal.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-linkerd-asset-dashboard-web-internal
  namespace: linkerd-viz
  annotations:    
    # cert-manager.io/cluster-issuer: letsencrypt  
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;      
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: web-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'  
spec:
  ingressClassName: internal-nginx
  rules:
    - host: linkerd-devuat.samsassets.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port: 
                  number: 8084
    
  tls:
  - hosts:
    - linkerd-devuat.samsassets.com
    secretName: linkerd-devuat-public-asset-secret
